--- a/index.html
+++ b/index.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3hreeman's Home</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f6f8fa;
-            color: #24292e;
-        }
-        .container {
-            text-align: center;
-            padding: 2rem;
-            background: white;
-            border-radius: 6px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-        }
-        h1 { margin-bottom: 0.5rem; }
-        p { color: #586069; }
-        a { color: #0366d6; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <!-- Markdown Parser -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Hello, I'm 3hreeman!</h1>
-        <p>Welcome to my GitHub Pages home.</p>
-        <p>Check out my <a href="https://github.com/3hreeman">GitHub Profile</a>.</p>
+        <header>
+            <h1>3hreeman's Home</h1>
+            <nav>
+                <button class="nav-btn active" onclick="loadTab('home')">Home</button>
+                <button class="nav-btn" onclick="loadTab('book')">Book</button>
+                <button class="nav-btn" onclick="loadTab('archive')">Archive</button>
+            </nav>
+        </header>
+
+        <main id="main-content">
+            <!-- Content will be loaded here dynamically -->
+            <div class="loading">Loading...</div>
+        </main>
+
+        <footer>
+            <p>&copy; 2026 3hreeman. All rights reserved.</p>
+        </footer>
     </div>
+
+    <!-- Data and Script -->
+    <script src="posts.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
