about tab added\napp.js modified

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <button class="nav-btn active" onclick="loadTab('home')">Home</button>
                 <button class="nav-btn" onclick="loadTab('book')">Book</button>
                 <button class="nav-btn" onclick="loadTab('archive')">Archive</button>
+				<button class="nav-btn" onclick="loadTab('about')">About Me</button>
             </nav>
         </header>
 
